<resources>
    <string name="app_name">PlayerHub</string>
    <string name="title_activity_dash_board">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="store">Store</string>
    <string name="videos">Videos</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming soon</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!
    </string>
    <string name="content">Content</string>
    <string name="show">Show</string>

    <string name="sample_date">The attribution text below and include it in a bibliography or image caption</string>
    <string name="slide">Slide</string>
    <string name="hide">Hide</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="barca_ny_04_pro">BARCA NY 04 PRO</string>
    <string name="vs">VS</string>
    <string name="stony_brook_santos">STONY BROOK SANTOS</string>
    <string name="profile">Profile</string>
    <string name="_4_5">4\'5\'\'</string>


    <string name="login_email_hint">Email</string>

    <string name="login_password_hint">Password</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_internet">There is no internet</string>
    <string name="emailempty">Email should not be empty</string>
    <string name="validemail">Enter a valid email</string>
    <string name="passwordempty">Password should not be empty</string>
    <string name="common_error">Something went wrong</string>
    <string name="no_events">There is no event found</string>
    <string name="default_notification_channel_id">Channel1</string>
    <string name="delete">Delete</string>
    <string name="no_data">There is no data</string>
    <string name="no_data_notification">You don\'t have any notifications</string>
    <string name="title_clear_all">Clear All</string>
    <string name="instructions">Place your fingertip on the Home button to verify your identity</string>


    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter password</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use Password</string>
    <string name="ok">Ok</string>
    <string name="today_event">Today Event</string>
    <string name="more">More</string>
    <string name="upcomming_event">Upcomming Event</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="no_today_event">There is no event</string>
    <string name="no_announcement">There is no announcement</string>
    <string name="no_upcoming_event">There is no event</string>
    <string name="more_events">More events</string>
    <string name="announcement_event">Announcement</string>
    <string name="announcement">ANNOUNCEMENT</string>
    <string name="title_activity_tab_triangel_test">TabTriangelTestActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="camera_rationale">Please grant permission to access images</string>
    <string name="title_create">Create</string>
    <string name="title_select_all">Select All</string>
    <string name="no_contact">No contacts added yet!</string>
    <string name="more_anouncement">See more announcement</string>
    <string name="enter_otp">Enter otp</string>
    <string name="please_wait_you_will_receive_otp_shortly">Please wait, you will receive otp shortly</string>
    <string name="kid_profile">Kid Profile</string>
    <string name="camera_and_location_rationale">Please grant camera permission to update profile image</string>
    <string name="title_activity_material_profile">MaterialProfileActivity</string>
    <string name="close">Close</string>
    <string name="create_event">Create Event</string>
    <string name="send">Send</string>
    <string name="place_apikey">AIzaSyDwAJUDnylr3p7h3aFpW2tiNfqC0j3smdY</string>
    <string name="transition_image">transition_image</string>
    <string name="transition_name">transition_name</string>
    <string name="share_transition_name">add_event</string>
    <string name="add_event">Add event</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="update">Update</string>
    <string name="create_sub_account">Create Account</string>
    <string name="transition_dialog">Update Profile</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="my_receipt_title">My Receipt</string>
    <string name="progress_uploading">Sending video to </string>


</resources>
