<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/today_event_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/event_name"
                    fontPath="fonts/Barlow-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/today_event"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />


                <LinearLayout
                    android:id="@+id/load_more_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        fontPath="fonts/Barlow-Regular.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more" />

                    <Space
                        android:layout_width="@dimen/_2sdp"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />


                </LinearLayout>


            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/eventList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/error_msg_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/_16sdp"
                    android:text="@string/no_today_event"
                    android:visibility="gone" />

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

</FrameLayout>