<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                tools:src="@drawable/profile" />

            <View
                android:id="@+id/useris_online"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginTop="8dp"
                android:background="@drawable/circle_accent_green"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/icon"
                app:layout_constraintEnd_toEndOf="@+id/icon"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toEndOf="@+id/icon"
                app:layout_constraintTop_toTopOf="@+id/icon"
                app:layout_constraintVertical_bias="0.79" />

        </android.support.constraint.ConstraintLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/icon"
            android:layout_toRightOf="@+id/icon"
            android:paddingLeft="@dimen/_16sdp">


            <TextView
                android:id="@+id/date_time"
                fontPath="fonts/Barlow-Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingRight="@dimen/_16sdp"
                android:text="@string/coming_soon"
                android:textSize="@dimen/_12sdp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/name"
                fontPath="fonts/Barlow-Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/_12ssp"
                android:paddingRight="@dimen/_16sdp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"

                />

            <TextView
                android:id="@+id/description"
                fontPath="fonts/Barlow-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="@dimen/_4sdp"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:paddingRight="@dimen/_16sdp"
                android:text="@string/barca_ny_04_pro"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginTop="@dimen/_minus15sdp">


                <RelativeLayout
                    android:id="@+id/count_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/shape_half">

                    <TextView
                        android:id="@+id/count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="4"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp" />

                </RelativeLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_below="@+id/count_lay"
                    android:background="@color/line" />

            </RelativeLayout>


        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>